--- a/include/footer.html
+++ b/include/footer.html
@@ -3,7 +3,7 @@
 	<table class="frame">
     	<tr>
             <td width="223" />
-            <td class="footer">©2018 Coltony Corporation. All rights reserved.
+            <td class="footer">&copy;2018 Coltony Corporation. All rights reserved.
             </td>
    <!--
           <td width="4"><img border="0" src="images/shim.gif" width="2" height="4">
