--- a/include/banner.html
+++ b/include/banner.html
@@ -1,20 +1,20 @@
      <table class="frame" >
         <tr>
-            <td><img src="/images/new_logo.gif" width="100" height="50">
+            <td><img src="images/new_logo.gif" width="100" height="50">
             </td>
         </tr>
 	<tr align="right" > 
             <td width="50%" />
-            <td class="banner"><a href="/index.shtml" class="banner">Advisory</a>
+            <td class="banner"><a href="index.shtml" class="banner">Advisory</a>
             </td>
             <td width="3%" />
-            <td class="banner"><a href="/solution.shtml" class="banner">Solutions</a>
+            <td class="banner"><a href="solution.shtml" class="banner">Solutions</a>
             </td>
             <td width="3%" />
-            <td class="banner" nowrap><a href="/about.html" class="banner">About Us</a>
+            <td class="banner" nowrap><a href="about.html" class="banner">About Us</a>
             </td>         
             <td width="3%" />
-            <td class="banner"><a href="/contact_us.shtml" class="banner">Contact</a>
+            <td class="banner"><a href="contact_us.shtml" class="banner">Contact</a>
             </td>
             <td width="20%" />
 	</tr>
